Almost finished light mode

--- a/Frontend/components/card/card.html
+++ b/Frontend/components/card/card.html
@@ -34,46 +34,34 @@
 <body class="darkmode">
 
   <main class="clearfix">
-    <a class="card" href="#">
+    <a data-bg="Starter" class="card" href="#">
       <div class="bg">
         <p class="number">1</p>
       </div>
-      <p class="bg-text">
-        Starter
-      </p>
       <h3 class="district">
         Starter
       </h3>
     </a>
-    <a class="card" href="#">
+    <a data-bg="Coaches" class="card" href="#">
       <div class="bg">
         <p class="number">2</p>
       </div>
-      <p class="bg-text">
-        Coaches
-      </p>
       <h3 class="district">
         Coaches
       </h3>
     </a>
-    <a class="card" href="#">
+    <a data-bg="Kampfrichter" class="card" href="#">
       <div class="bg">
         <p class="number">3</p>
       </div>
-      <p class="bg-text">
-        Kampfrichter
-      </p>
       <h3 class="district">
         Kampf&shy;richter
       </h3>
     </a>
-    <a class="card" href="#">
+    <a data-bg="Helfer" class="card" href="#">
       <div class="bg">
         <p class="number">4</p>
       </div>
-      <p class="bg-text">
-        Helfer
-      </p>
       <h3 class="district">
         Helfer
       </h3>
