--- a/Frontend/css/sites/tournament-time-schedule.css
+++ b/Frontend/css/sites/tournament-time-schedule.css
@@ -1,19 +1,9 @@
 main {
-    height: auto;
     padding-bottom: 10rem;
 }
 
 main p {
     font-size: 1.5rem;
-}
-
-.scroll-container {
-    height: auto;
-    padding: 1rem 4rem 3rem 3rem;
-    position: relative;
-    margin-left: -3rem;
-    width: calc(100% + 6rem);
-    overflow-x: auto;
 }
 
 .time-container {
@@ -28,7 +18,7 @@ main p {
     position: absolute;
     top: 4em;
     left: 0;
-    border-left: 5px solid #3D76E1;
+    border-left: 5px solid var(--accent-color-1-dark);
     height: calc(100% - 4rem); /* This is the height of the names (h2 elements) of the fighting places which are not part of the timing schedule */
     width: 8em;
     z-index: 10;
@@ -51,7 +41,7 @@ main p {
 .time-scale span:before {
     content: '';
     position: absolute;
-    background-color: #3D76E1;
+    background-color: var(--accent-color-1-dark);
     height: 5px;
     left: 0;
     top: 50%;
@@ -98,18 +88,18 @@ main p {
     left: 7rem;
     top: -2px;
     height: 2px;
-    background-color: #222222;
+    background-color: var(--theme-color-2);
     width: 16rem; /* Standard length for one available fight place */
 }
 
 .time-container .fight-place {
-    background-color: #171717;
+    background-color: var(--theme-color-1);
     display: inline-block;
     height: 100%;
     width: 15rem;
     padding: 0.5rem;
     position: relative;
-    box-shadow: 0 2px 5px 0 black;
+    box-shadow: 0 2px 5px 0 var(--box-shadow);
     margin: 0 0.5rem;
     vertical-align: top;
 }
@@ -117,9 +107,9 @@ main p {
 .fight-place h2 {
     margin: 0 0 0.5rem;
     padding: 0.5rem 0 1rem 0.5rem;
-    background-color: #222222;
+    background-color: var(--theme-color-2);
     border-radius: 5px;
-    box-shadow: 0 2px 5px 2px black;
+    box-shadow: 0 2px 5px 2px var(--box-shadow);
     height: 3rem;
 }
 
@@ -149,8 +139,8 @@ main p {
     height: 10rem;
     left: 0;
     bottom: 0;
-    background-color: #171717;
-    box-shadow: 0 0 10px 3px black;
+    background-color: var(--theme-color-1);
+    box-shadow: 0 0 10px 3px var(--box-shadow);
     z-index: 100;
 }
 
@@ -160,8 +150,8 @@ main p {
     text-align: center;
     position: relative;
     overflow: hidden;
-    border: 1px solid #222222;
-    background-color: #303030;
+    border: 1px solid var(--theme-color-2);
+    background-color: var(--theme-color-3);
 }
 
 .time-block.dragging {
@@ -173,10 +163,10 @@ main p {
 .time-blocks-container .break-section {
     width: 13rem;
     padding: 0.5rem 1rem;
-    border-right: 5px solid #303030;
+    border-right: 5px solid var(--theme-color-3);
     height: 100%;
     display: inline-block;
-    box-shadow: 15px 0 10px -10px black;
+    box-shadow: 15px 0 10px -10px var(--box-shadow);
     z-index: 100;
 }
 
@@ -191,7 +181,7 @@ main p {
 
 .break h3 {
     margin: 0 0 0.5rem;
-    text-shadow: 1px 1px 3px black;
+    text-shadow: 1px 1px 3px var(--text-shadow);
 }
 
 .break p {
@@ -226,7 +216,7 @@ main p {
 
 .category h3 {
     margin: 0 0 0.5rem;
-    text-shadow: 1px 1px 3px black;
+    text-shadow: 1px 1px 3px var(--text-shadow);
 }
 
 .category p {
