--- a/Frontend/css/components/notification.css
+++ b/Frontend/css/components/notification.css
@@ -20,7 +20,7 @@
   border: 1px solid var(--accent-color-1-dark);
   height: 4.5em;
   width: 4.5em;
-  background: rgba(61, 118, 225, 0.4);
+  background: rgba(61, 118, 225, 0.7);
   box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-1-dark) inset;
   right: -6em;
   bottom: 2em;
@@ -28,6 +28,10 @@
   transition: width 0.75s ease 0.5s, height 0.5s ease 0s, background-color 1.25s ease, right 0.5s ease 1.25s;
   overflow: hidden;
   transform-origin: 50% 100%;
+}
+
+.darkmode .notification {
+  background: rgba(61, 118, 225, 0.4);
 }
 
 .notification.visible {
@@ -38,7 +42,7 @@
 .notification.visible:hover {
   height: 7em;
   width: calc(100% - 4rem);
-  background: rgba(61, 118, 225, 0.6);
+  background: rgba(61, 118, 225, 0.9);
   transition: width 0.75s ease 0s, height 0.5s ease 0.75s;
   animation-play-state: paused;
 }
@@ -129,7 +133,7 @@
   font-weight: bold;
   right: 0.5rem;
   top: 0.5rem;
-  color: #171717;
+  color: var(--theme-color-1);
   text-align: center;
   transition: color 0.2s ease, opacity 0.2s ease 0s;
   cursor: pointer;
@@ -143,7 +147,7 @@
   width: 1.1em;
   height: 1.1em;
   border-radius: 50%;
-  background-color: #4A4A4A;
+  background-color: var(--theme-color-1);
   position: absolute;
   top: -0.05em;
   left: -0.05em;
@@ -183,8 +187,12 @@
 
 .notification.error {
   border: 1px solid var(--accent-color-2-dark);
-  background: rgba(178, 58, 72, 0.4);
+  background: rgba(178, 58, 72, 0.7);
   box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-2-dark) inset;
+}
+
+.darkmode .notification.error {
+  background: rgba(178, 58, 72, 0.4);
 }
 
 .notification.visible.error {
@@ -193,13 +201,21 @@
 }
 
 .notification.visible.error:hover {
+  background: rgba(178, 58, 72, 0.8);
+}
+
+.darkmode .notification.visible.error:hover {
   background: rgba(178, 58, 72, 0.6);
 }
 
 .notification.success {
   border: 1px solid var(--accent-color-3-dark);
-  background: rgba(32, 191, 85, 0.4);
+  background: rgba(32, 191, 85, 0.7);
   box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-3-dark) inset;
+}
+
+.darkmode .notification.success {
+  background: rgba(32, 191, 85, 0.4);
 }
 
 .notification.visible.success {
@@ -208,11 +224,19 @@
 }
 
 .notification.visible.success:hover {
+  background: rgba(32, 191, 85, 0.8);
+}
+
+.darkmode .notification.visible.success:hover {
   background: rgba(32, 191, 85, 0.6);
 }
 
 
 .notification.warning .symbol {
+  color: var(--accent-color-5-dark);
+}
+
+.darkmode .notification.warning .symbol {
   color: var(--accent-color-5-light);
 }
 
@@ -221,7 +245,7 @@
 }
 
 .notification.success .symbol {
-  color: var(--accent-color-3-dark);
+  color: var(--accent-color-3-light);
 }
 
 
