--- a/Frontend/css/sites/category-fighting-system.css
+++ b/Frontend/css/sites/category-fighting-system.css
@@ -3,6 +3,17 @@ main {
   padding-bottom: 5rem;
 }
 
+main h3 {
+  text-align: center;
+  font-size: 2rem;
+  border-bottom: 3px solid var(--theme-color-4);
+  box-shadow: 0 15px 10px -10px var(--box-shadow);
+}
+
+.accordion {
+  margin-bottom: 4rem;
+}
+
 .open .bar-header {
    position: relative;
    top: 0;
@@ -15,30 +26,30 @@ main {
 
 .bar-header:before,
 .bar-header:after {
-  background-color: #B23A48;
+  background-color: var(--error-dark);
 }
 
 .bar-header:hover:before,
 .bar-header:hover:after {
-  background-color: #F71735;
+  background-color: var(--error-light);
 }
 
 .bar-header .open-indicator {
-  color: #B23A48;
+  color: var(--error-dark);
 }
 
 .prepared .bar-header:before,
 .prepared .bar-header:after {
-  background-color: #20BF55;
+  background-color: var(--success-dark);
 }
 
 .prepared .bar-header:hover:before,
 .prepared .bar-header:hover:after {
-  background-color: #5EFC8D;
+  background-color: var(--success-light);
 }
 
 .prepared .bar-header .open-indicator {
-  color: #20BF55;
+  color: var(--success-dark);
 }
 
 .prepared .bar-header:hover .open-indicator,
@@ -48,7 +59,7 @@ main {
 
 .prepared .prepared {
   position: absolute;
-  color: #20BF55;
+  color: var(--success-dark);
   font-size: 2.5em;
   font-weight: bold;
   top: 50%;
@@ -57,23 +68,23 @@ main {
 }
 
 .bar-header:hover .prepared {
-  color: #5EFC8D;
+  color: var(--success-light);
 }
 
 .open .bar-content {
-  border-color: #B23A48;
+  border-color: var(--error-dark);
 }
 
 .open .bar-header:hover ~ .bar-content {
-  border-color: #F71735;
+  border-color: var(--error-light);
 }
 
 .prepared .bar-content {
-  border-color: #20BF55;
+  border-color: var(--success-dark);
 }
 
 .open.prepared .bar-header:hover ~ .bar-content {
-  border-color: #5EFC8D;
+  border-color: var(--success-light);
 }
 
 .bar-content .side {
@@ -88,7 +99,7 @@ main {
   font-size: 2em;
   font-style: italic;
   cursor: pointer;
-  color: #3D76E1;
+  color: var(--accent-color-1-dark);
   transition: 0.2s ease;
   margin-top: 1em;
 }
@@ -99,18 +110,18 @@ main {
 }
 
 .bar-content .fighting-system:hover {
-  color: #2699FB;
+  color: var(--accent-color-1-light);
 }
 
 .bar-content .fighting-system:before {
   content: 'Kampfsystem';
   position: absolute;
   font-style: italic;
-  color: #303030;
+  color: var(--theme-color-3);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) skewY(-10deg);
-  text-shadow: 0 0 5px black;
+  text-shadow: 0 0 5px var(--text-shadow);
   z-index: -1;
   font-size: 1.5em;
 }
@@ -148,6 +159,11 @@ main {
 }
 
 @media only screen and (min-width: 992px) {
+  main h3 {
+    text-align: center;
+    font-size: 2.5rem;
+  }
+
   .bar-content .side {
     width: 50%;
     float: left;
