--- a/Frontend/css/sites/dashboard.css
+++ b/Frontend/css/sites/dashboard.css
@@ -4,9 +4,8 @@ h1 {
   transform: translateY(-50%);
   margin: 0;
   font-size: 3.5rem;
-  text-shadow: 2px 2px 10px black;
-  transition: 0.5s ease;
-  transition-delay: 1s;
+  text-shadow: 2px 2px 10px var(--text-shadow);
+  transition: top 0.5s ease 1s, left 0.5s ease 1s;
   position: fixed;
 }
 
@@ -35,10 +34,7 @@ h1.welcome-done {
   margin-top: 7rem;
 }
 
-.dashboard .col {
-  width: 100%;
-  float: left;
-  height: auto;
+.dashboard .container-medium {
   margin-bottom: 2rem;
 }
 
@@ -49,17 +45,21 @@ h1.welcome-done {
   width: 100%;
   height: 20rem;
   border-radius: 20px;
-  box-shadow: 3px 3px 15px 5px black;
-  background-color: rgba(23, 23, 23, 0.75);
+  box-shadow: 3px 3px 15px 5px var(--box-shadow);
+  background-color: rgba(232, 232, 232, 0.75);
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
   transition: 0.5s ease;
   margin-bottom: 2rem;
   overflow: hidden;
 }
 
+.darkmode .tournaments {
+  background-color: rgba(23, 23, 23, 0.75);
+}
+
 .tournaments:hover {
-  background-color: #303030;
+  background-color: var(--theme-color-3);
   transform: scale(1.05);
 }
 
@@ -70,7 +70,7 @@ h1.welcome-done {
   width: 7rem;
   height: 7rem;
   z-index: 0;
-  background-color: #3D76E1;
+  background-color: var(--accent-color-1-dark);
   transform: rotate(45deg);
   transition: 0.5s ease;
 }
@@ -88,7 +88,7 @@ h1.welcome-done {
 .tournaments:hover:before,
 .tournaments:hover:after {
   transform: rotate(45deg) scale(3);
-  background-color: #2699FB;
+  background-color: var(--accent-color-1-light);
 }
 
 .tournaments h3 {
@@ -107,17 +107,17 @@ h1.welcome-done {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #3D76E1;
+  color: var(--accent-color-1-dark);
   font-size: 8rem;
   margin: 0 auto;
   transition: 0.5s ease;
   font-weight: bold;
-  text-shadow: 2px 2px 5px black;
+  text-shadow: 2px 2px 5px var(--text-shadow);
 }
 
 .tournaments:hover span {
-  color: #2699FB;
-  text-shadow: 3px 3px 10px black;
+  color: var(--accent-color-1-light);
+  text-shadow: 3px 3px 10px var(--text-shadow);
   transform: translate(-50%, -50%) scale(1.2);
 }
 
@@ -138,13 +138,9 @@ h1.welcome-done {
 }
 
 @media only screen and (min-width: 992px) {
-  main.welcome-done h1 {
-    top: 3rem;
-    left: 3rem;
-  }
-
-  .dashboard .col {
-    width: 50%;
+  h1.welcome-done {
+    margin-top: 1rem;
+    margin-left: 1rem;
   }
 
   .dashboard .col:not(:last-of-type) {
