--- a/Frontend/css/sites/documents.css
+++ b/Frontend/css/sites/documents.css
@@ -4,13 +4,13 @@ main {
 
 main h1 {
   text-align: left;
-  margin-bottom: 3rem;
 }
 
 .document-reservoir {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-top: 3rem;
   margin-bottom: 2rem;
 }
 
@@ -29,14 +29,14 @@ main h1 {
 
 .document i {
   font-size: 5rem;
-  color: #20BF55;
+  color: var(--accent-color-3-dark);
   transition: 0.2s ease;
 }
 
 .document:hover i,
 .document.chosen i {
-  color: #5EFC8D;
-  filter: drop-shadow(0 0 5px #5EFC8D);
+  color: var(--accent-color-3-light);
+  filter: drop-shadow(0 0 5px var(--accent-color-3-light));
   transform: scale(1.2);
 }
 
@@ -48,8 +48,12 @@ main h1 {
 }
 
 .document:hover p {
-  color: #5EFC8D;
+  color: var(--accent-color-3-dark);
   text-decoration: underline;
+}
+
+.darkmode:hover p {
+  color: var(--accent-color-3-light);
 }
 
 .file-input-container {
@@ -73,8 +77,8 @@ main h1 {
   left: 0;
   bottom: -18rem;
   width: 100%;
-  background: linear-gradient(#303030 25%, #171717);
-  box-shadow: 0 0 15px 5px black;
+  background: linear-gradient(var(--theme-color-3) 25%, var(--theme-color-1));
+  box-shadow: 0 0 15px 5px var(--box-shadow);
   text-align: center;
   transition: 0.5s ease;
 }
@@ -90,19 +94,22 @@ main h1 {
 }
 
 .document-interaction .document-name {
-  background-color: #171717;
+  background-color: var(--theme-color-1);
   padding: 0.5rem 1rem;
   border-radius: 3rem;
-  box-shadow: 0 0 9px 3px black inset;
+  box-shadow: 0 0 9px 3px var(--box-shadow) inset;
   margin-left: 1rem;
   display: inline-block;
 }
 
-.document-interaction input.document-name {
+.document-interaction input.quick-input {
+  background-color: var(--theme-color-1);
+  padding: 0.5rem 1rem;
+  border-radius: 3rem;
   display: inline-block;
-  color: white;
+  color: var(--text-color);
   border: none;
-  box-shadow: 0 0 9px 3px black inset, 0 0 9px 3px #9B9B9B;
+  box-shadow: 0 0 9px 3px var(--box-shadow) inset, 0 0 9px 3px var(--theme-color-5);
   font-style: italic;
 }
 
@@ -137,8 +144,5 @@ main h1 {
 }
 
 @media only screen and (min-width: 1200px) {
-  main {
-    width: 1200px;
-    box-shadow: 2px 0 7px 3px black;
-  }
+
 }
