--- a/Frontend/css/sites/enroll-entity.css
+++ b/Frontend/css/sites/enroll-entity.css
@@ -1,7 +1,3 @@
-h1 span {
-  color: #3D76E1;
-}
-
 .table {
   margin-bottom: 7rem;
 }
@@ -11,6 +7,10 @@ h1 span {
 }
 
 .table tr.selected {
+  background-color: #206792;
+}
+
+.darkmode .table tr.selected {
   background-color: #133C55;
 }
 
