--- a/Frontend/css/sites/fighter-tournament-configuration.css
+++ b/Frontend/css/sites/fighter-tournament-configuration.css
@@ -8,8 +8,8 @@ main {
 
 .fighter-card {
   position: absolute;
-  background-color: #303030;
-  box-shadow: 0 5px 10px 3px black;
+  background-color: var(--theme-color-3);
+  box-shadow: 0 5px 10px 3px var(--box-shadow);
   padding: 1rem;
   margin-bottom: 4rem;
   width: 100%;
@@ -44,20 +44,16 @@ main {
   margin-bottom: 1rem;
   text-align: center;
   font-size: 2rem;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: 2px 2px 3px var(--text-shadow);
   padding-bottom: 0.25rem;
-  color: #3D76E1;
-  border-bottom: 3px solid #171717;
-  box-shadow: 0 10px 10px -10px black;
-}
-
-.fighter-card .info {
-
+  color: var(--accent-color-1-dark);
+  border-bottom: 3px solid var(--theme-color-1);
+  box-shadow: 0 10px 10px -10px var(--box-shadow);
 }
 
 .info p {
   margin: 0 0 0.5rem;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 1px 1px 2px var(--text-shadow);
   font-size: 1.25rem;
   padding-left: 50%;
   position: relative;
@@ -69,7 +65,7 @@ main {
   top: 45%;
   transform: translateY(-50%);
   right: 0;
-  color: #171717;
+  color: var(--theme-color-1);
   font-size: 1em;
   font-weight: 900;
   font-style: italic;
@@ -78,27 +74,23 @@ main {
   display: inline-block;
   max-width: 100%;
   padding-right: 54%;
-  text-shadow: 1px 1px 1px black;
+  text-shadow: 1px 1px 1px var(--text-shadow);
   margin: 0;
-}
-
-.fighter-card .configuration {
-
 }
 
 .configuration h3 {
   font-size: 1.5rem;
   padding-left: 1rem;
   padding-bottom: 0.25rem;
-  color: #9B9B9B;
-  border-bottom: 2px dashed #4A4A4A;
+  color: var(--theme-color-5);
+  border-bottom: 2px dashed var(--theme-color-4);
 }
 
 .configuration .exam-type-container {
   display: grid;
   grid-template-columns: 50% 50%;
   margin-bottom: 1.5rem;
-  border-bottom: 2px dotted #4A4A4A;
+  border-bottom: 2px dotted var(--theme-color-4);
 }
 
 .configuration h4 {
@@ -132,10 +124,10 @@ main {
   position: absolute;
   right: 0;
   top: 100%;
-  background-color: #303030;
+  background-color: var(--theme-color-3);
   padding: 0.5rem 2.5rem 0.5rem 1rem;
   height: 3.5rem;
-  box-shadow: 0 9px 8px 0 black;
+  box-shadow: 0 9px 8px 0 var(--box-shadow);
   font-size: 1.5rem;
   z-index: 1;
 }
@@ -145,14 +137,14 @@ main {
   position: absolute;
   top: 0;
   left: -3.5rem;
-  border-top: 3.5rem solid #303030;
+  border-top: 3.5rem solid var(--theme-color-3);
   border-right: 3.5rem solid transparent;
   border-left: 3.5rem solid transparent;
   z-index: -1;
 }
 
 .progress-indicator span {
-  color: #3D76E1;
+  color: var(--accent-color-1-dark);
   font-weight: bold;
   font-size: 2rem;
 }
