--- a/Frontend/css/sites/landing-page.css
+++ b/Frontend/css/sites/landing-page.css
@@ -11,20 +11,9 @@ main p {
   line-height: 1.25;
 }
 
-main span {
-  position: relative;
-  display: inline-block;
-  color: #2699FB;
-  transition: 0.2s ease;
-}
-
-main span:hover {
-  transform: scale(1.2);
-}
-
 .is-typing:after, .typed:after {
   content: '|';
-  color: #2699FB;
+  color: var(--accent-color-1-light);
   -webkit-animation: blink 650ms infinite;
   animation: blink 650ms infinite;
 }
@@ -49,7 +38,7 @@ main span:hover {
 
 main a.enroll {
   position: relative;
-  color: white;
+  color: var(--text-color);
   font-size: 2.5rem;
   transition: 0.2s ease;
   float: right;
@@ -67,7 +56,7 @@ a.enroll.hidden {
 
 main a.enroll:hover,
 main a.enroll:focus {
-  color: #2699FB;
+  color: var(--accent-color-1-light);
   text-decoration: none;
 }
 
@@ -78,7 +67,7 @@ main a.enroll:before {
   height: 4px;
   bottom: 20%;
   left: 0;
-  background-color: #2699FB;
+  background-color: var(--accent-color-1-light);
   transition: 0.2s ease;
   transition-delay: 0.2s;
 }
@@ -97,18 +86,18 @@ main a.enroll i {
   height: 5rem;
   display: inline-block;
   line-height: 1.2;
-  border: 3px solid white;
+  border: 3px solid var(--text-color);
   text-align: center;
   vertical-align: middle;
   margin-left: 1rem;
   transition: 0.2s ease;
   transition-delay: 0s;
-  color: #2699FB;
+  color: var(--accent-color-1-light);
 }
 
 main a.enroll:hover i,
 main a.enroll:focus i {
-  border-color: #2699FB;
+  border-color: var(--accent-color-1-light);
   transform: scale(1.2);
   transition-delay: 0.2s;
 }
