--- a/Frontend/css/sites/login.css
+++ b/Frontend/css/sites/login.css
@@ -1,9 +1,13 @@
+body {
+  overflow-x: hidden;
+}
+
 .light-fighter {
   display: block;
   position: fixed;
   width: 3rem;
   height: auto;
-  filter: drop-shadow(0 0 20px white);
+  filter: drop-shadow(0 0 20px var(--text-color));
   top: 50%;
   left: 50%;
   transform: translate(-45%, -45%) scale(0.3);
@@ -18,10 +22,10 @@
   height: 1rem;
   border-radius: 50%;
   transform: translate(-50%, -50%) scale(0.3);
-  background-color: white;
+  background-color: var(--text-color);
   top: 50%;
   left: 50%;
-  box-shadow: 0 0 50px 60px white;
+  box-shadow: 0 0 50px 60px var(--box-shadow);
   transition: transform 2s ease-in, opacity 1s ease;
   transition-delay: 0.5s;
   opacity: 0;
@@ -64,15 +68,15 @@ main p {
 }
 
 main p span {
-  color: #3D76E1;
+  color: var(--accent-color-1-dark);
 }
 
 main .arrow {
   width: 100px;
   height: auto;
-  filter: drop-shadow(2px 2px 3px black);
+  filter: drop-shadow(2px 2px 3px var(--box-shadow));
   position: absolute;
-  top: 12rem;
+  top: 8rem;
   left: 60%;
   opacity: 0;
   transition: 0.5s ease;
@@ -90,7 +94,7 @@ body.sent .arrow {
   position: absolute;
   width: 100%;
   height: 50rem;
-  top: 10rem;
+  top: 5rem;
   left: 0;
   transition: 0.5s ease;
 }
@@ -142,14 +146,19 @@ body.sent .arrow {
 
 @media only screen and (min-width: 992px) {
   main p {
-    font-size: 3rem;
+    font-size: 2.5rem;
     max-width: 95rem;
     top: calc(50% - 24rem);
   }
 
   main .arrow {
     width: 150px;
+    top: 9rem;
   }
+
+  .login-change-container {
+     top: 8rem;
+   }
 
   .login-container {
     left: calc(50% - 10rem);
@@ -161,5 +170,7 @@ body.sent .arrow {
 }
 
 @media only screen and (min-width: 1200px) {
-
+  main {
+    max-width: 1500px;
+  }
 }
